Fix mobile word wrapping

--- a/app/src/globals.scss
+++ b/app/src/globals.scss
@@ -12,7 +12,8 @@ body {
 body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  overflow-wrap: anywhere;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .app-body {
